--- a/client/public/scss/_header.scss
+++ b/client/public/scss/_header.scss
@@ -1,8 +1,7 @@
 #header {
 	position: relative;
-	height: 100%;
-	min-height: 100%;
 	background: $body-bg;
+	margin-bottom: 6em;
 	&.no-height {
 		height: auto;
 		min-height: auto;
@@ -26,17 +25,29 @@
 		z-index: 1;
 		background: $black-default;
 		border: none;
-		margin-bottom: 5em;
+		margin-bottom: 1em;
 		.navbar-nav {
+			ul {
+				padding: 10px;
+			}
 			li {
 				margin-right: 10px;
 				a {
+					text-decoration: none;
 					color: $white-default;
 					text-transform: uppercase;
 					font-weight: bold;
 					&:hover, &:active {
 						color: #fcee32
 					}
+				}
+				.dropdown-menu {
+					a {
+						color: $black-default;
+					}
+				}
+				.btn-group {
+					padding-top: 0.55em;
 				}
 			}
 		}
