--- a/client/public/scss/_products.scss
+++ b/client/public/scss/_products.scss
@@ -23,9 +23,11 @@
 	}
 	.list_pro {
 		.product_item {
-			margin: 1.3em 0;
+			margin: 1.5em 0;
+			min-height: 31em;
 			.preview {
 				position: relative;
+				margin-bottom: 1em;
 				img {
 					min-height: 13em;
 					max-height: 13em;
@@ -35,6 +37,7 @@
 				text-align: center;
 				border: 1px solid #ececec;
 				padding: 1em;
+				min-height: 15em;
 				.price {
 					position: relative;
 					strong {
